# habr_atomic_cv

./: CMakeLists.txt  readme.md
.github/workflows/: cmake.yaml  ubuntu-clang.yaml  ubuntu.yaml
src/: example.cpp
src/game/: game.h
src/game/game_atomic/: game_atomic.cpp  game_atomic.h
src/game/game_base/: game_base.cpp  game_base.h
src/game/game_cv/: game_cv.cpp  game_cv.h
src/game/game_time/: game_time.cpp  game_time.h
